# lumin

./: .gitignore  CMakeLists.txt  README.md  README.txt  lumin
data/levels/: level_-1.txt  level_1.txt  level_10.txt  level_11.txt  level_111.txt  level_12.txt  level_13.txt  level_14.txt  level_15.txt  level_16.txt  level_17.txt  level_18.txt  level_19.txt  level_2.txt  level_20.txt  level_3.txt  level_4.txt  level_5.txt  level_6.txt  level_7.txt  level_8.txt  level_9.txt  level_data.txt
data/meshes/: salmon.mesh
ext/freetype2/include/freetype/config/: ftconfig.h
ext/freetype2/lib/: freetype-x64.lib  freetype-x86.lib
milestone-docs/: grand-finale.md  minimal-playability.md  playability.md  robust-game.md  skeletal-game.md
shaders/: colored.fs.glsl  colored.vs.glsl  firefly.fs.glsl  laserlight.fs.glsl  laserlight.vs.glsl  light.fs.glsl  player.fs.glsl  player.vs.glsl  radiuslight.vs.glsl  screen.fs.glsl  screen.vs.glsl  text.fs.glsl  text.vs.glsl  textured.fs.glsl  textured.vs.glsl  water.fs.glsl
src/: CollisionManager.cpp  CollisionManager.hpp  DarkWall.cpp  DarkWall.hpp  LevelGenerator.cpp  LevelGenerator.hpp  LightBeam.cpp  LightBeam.hpp  LightBeamParticle.cpp  LightBeamParticle.hpp  LightWall.cpp  LightWall.hpp  TextRenderer.cpp  TextRenderer.hpp  a1.cpp  common.cpp  common.hpp  current_level.cpp  current_level.hpp  door.cpp  door.hpp  end_screen.hpp  entity.cpp  entity.hpp  firefly.cpp  firefly.hpp  fish.cpp  fish.hpp  fog.cpp  fog.hpp  game_screen.cpp  game_screen.hpp  glass.hpp  hint.cpp  hint.hpp  in_game_screen.cpp  in_game_screen.hpp  lantern.cpp  lantern.hpp  laser_screen.hpp  (+42 more)
src/game-screens/: end_screen.hpp  game_screen.cpp  game_screen.hpp  level_unlocked_sparkle.cpp  load_game_screen.hpp  new_game_screen.hpp
